2005-11-17  Steven Munroe  <sjmunroe@us.ibm.com>

	[BZ #1877]
	* string/test-strncmp.c (do_test_limit): Handle zero length and
	non-zero align values.
	(test_main): Correct do_test_limit tests for 64-bit.

2005-11-15  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/sysdep.h (PPC_FEATURE_HAS_SPE,
	PPC_FEATURE_HAS_EFP_SINGLE, PPC_FEATURE_HAS_EFP_DOUBLE,
	PPC_FEATURE_NO_TB, PPC_FEATURE_POWER4, PPC_FEATURE_POWER5,
	PPC_FEATURE_POWER5_PLUS, PPC_FEATURE_CELL, PPC_FEATURE_970):
	Define to match 2.6.15 kernel.

	* sysdeps/powerpc/fpu/e_sqrt.c: Remove dl-procinfo.h include.
	* sysdeps/powerpc/fpu/e_sqrtf.c: Likewise.
	* sysdeps/powerpc/fpu/w_sqrtf.c: Likewise.

2005-11-17  Roland McGrath  <roland@redhat.com>

	* elf/elf.h (R_PPC64_ADDR30): Renamed to R_PPC64_REL30.

2005-11-17  Jakub Jelinek  <jakub@redhat.com>

	* io/sys/stat.h (fstatat): If __REDIRECT_NTH isn't defined,
	define fstatat to fstatat64.

2005-11-17  Steven Munroe  <sjmunroe@us.ibm.com>

	[BZ #1877]
	* string/test-strncmp.c (do_test_limit): New function.
	(do_test) Add cast to eliminate compiler warnings.
	(do_random_tests) Add cast to eliminate compiler warnings.
	(test_main) Add do_test_limit tests.
	* sysdeps/powerpc/powerpc32/strncmp.S: Test length before unaligned
	load.
	* sysdeps/powerpc/powerpc64/strncmp.S: Likewise.

2005-11-17  Ulrich Drepper  <drepper@redhat.com>

	* include/resolv.h: Include <stdbool.h>.
	Patch by Paul Brook.

	* io/sys/stat.h: Use __const not const in fstatat prototypes.

2005-11-08  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/wordsize-32/Makefile (CPPFLAGS-divdi3.c): Set to
	-Din_divdi3_c.
	* sysdeps/wordsize-32/symbol-hacks.h: Skip if in_divdi3_c is defined.

2005-11-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/fchownat.c: Include string.h.
	* sysdeps/unix/sysv/linux/futimesat.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/fchownat.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/fxstatat.c: Likewise.
	* sysdeps/unix/sysv/linux/renameat.c: Likewise.